[gd_scene load_steps=6 format=3 uid="uid://no5myd3iv8c6"]

[ext_resource type="Script" uid="uid://bgpmyfgytifs3" path="res://scenes/interface/menu.gd" id="1_numdc"]
[ext_resource type="Texture2D" uid="uid://bl0j5tk81q2jq" path="res://assets/img/background/céu.png" id="2_numdc"]
[ext_resource type="Texture2D" uid="uid://bmrl80085lt83" path="res://assets/img/background/ChatGPT Image 18 de mai. de 2025, 14_45_22.png" id="3_ailub"]
[ext_resource type="Texture2D" uid="uid://cis8nllag76q4" path="res://assets/logo.png" id="4_2hesr"]
[ext_resource type="Theme" uid="uid://cp0r64husr6na" path="res://temabotÔö£├║o.tres" id="5_xo8xr"]

[node name="Menu 2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_numdc")

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = -2.0
offset_right = 1674.0
offset_bottom = 668.0
texture = ExtResource("2_numdc")
expand_mode = 1
stretch_mode = 4

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -25.0
offset_top = -30.0
offset_right = 1820.0
offset_bottom = 815.0
texture = ExtResource("3_ailub")
expand_mode = 1
stretch_mode = 4

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.914
offset_top = -321.0
offset_right = 335.914
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_2hesr")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0.862745)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -261.0
offset_right = 87.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 250
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0.979328)
layout_mode = 2
size_flags_horizontal = 6

[node name="Jogar" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_xo8xr")
text = "Jogar"

[node name="Controles" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_xo8xr")
text = "Controles"

[node name="Sobre" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_xo8xr")
text = "Sobre"

[node name="Sair" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_xo8xr")
text = "Sair"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Controles" to="." method="_on_controles_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Sobre" to="." method="_on_sobre_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
